feat: 添加认证服务和安全配置
- 添加AuthService认证业务逻辑
- 添加Spring Security配置
- 添加JWT工具类和认证过滤器
- 添加自定义用户详情服务